--- a/projectfiles/VC9/wesnothd.vcproj
+++ b/projectfiles/VC9/wesnothd.vcproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="wesnothd"
 	ProjectGUID="{72F28A4A-A6A2-4C49-8141-7CD0DFA9ECCE}"
 	RootNamespace="wesnothd"
@@ -248,6 +248,86 @@
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
+		<Configuration
+			Name="Release WITH DBG|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="0"
+			WholeProgramOptimization="1"
+			BuildLogFile="$(IntDir)\BuildLog-wesnothd.htm"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="../../src"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;HAVE_PYTHON;USE_GZIP;NOMINMAX;_SCL_SECURE_NO_WARNINGS"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				OpenMP="true"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				DebugInformationFormat="3"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="libintl.lib SDL.lib SDL_net.lib winmm.lib ws2_32.lib SDLmain.lib"
+				LinkIncremental="1"
+				AdditionalLibraryDirectories=""
+				GenerateDebugInformation="false"
+				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				LinkTimeCodeGeneration="1"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
@@ -285,6 +365,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -331,6 +419,14 @@
 						ObjectFile="$(IntDir)\Server\"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\src\server\game.hpp"
@@ -361,6 +457,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -399,6 +503,14 @@
 						ObjectFile="$(IntDir)\Server\"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\src\server\metrics.hpp"
@@ -425,6 +537,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -465,6 +585,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -527,6 +655,14 @@
 						ObjectFile="$(IntDir)\Server\"
 					/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\src\server\server.hpp"
@@ -553,6 +689,14 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug_with_VLD|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)\Server\"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release WITH DBG|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
