Fix the MSVC9 'wesnoth' project

--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -4654,7 +4654,8 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-ll						>
+						Name="ReleaseDEBUG|Win32"
+						>
 						<Tool
 							Name="VCCLCompilerTool"
 							ObjectFile="$(IntDir)\Gui\Widgets\"
